- **[FEATURE]** Added Python 3.10 support - **[FEATURE]** Added Python 3.12 support - **[DOC]** Added Release Notes - **[DOC]** Updated README - **[FEATURE]** Fixed __init__.py so the module can now be used as `from uglylogger import Logger` instead of `from uglylogger.logger import Logger`

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]black
 requires = tox>=4
-envlist = py{311}
+envlist = py{310, 311, 312}
 isolated_env=false
 
 [testenv]
@@ -20,9 +20,12 @@ commands =
     coverage report
 
 [flake8]
-exclude = .tox,*.egg,build,data
+exclude = .tox,*.egg,build,data,venv
 select = E,W,F
 docstring-convention = numpy
+per-file-ignores = 
+    # imported but unused
+    __init__.py: F401  
 
 [black]
 line-length = 79
