--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
       id-token: write
     strategy:
         matrix:
-          python: ['3.10', '3.11', '3.12']
+          python: ['3.10']
 
     steps:
       - name: Checkout
