--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,19 +17,21 @@ jobs:
       id-token: write
     strategy:
         matrix:
-          python: ['3.10']
+          python: ['3.10'] # use the lowest supported version
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Python ${{ matrix.python }}
+      - name: Setup Python
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python }}
+      - name: Test
+        run: python -m tox -c tox-ci.ini
       - name: Build
         run : |
           python -m pip install -U pip build
-          python -m build
+          python -m build          
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
       
