--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,4 @@ jobs:
         run: |
           python -m pip install -U tox 
       - name: Test
-        run: python -m tox -e py
+        run: python -m tox -c tox-ci.ini
