**[FEATURE]** Added move() functionality
* **[FEATURE]** Added move() functionality [see: Function move()](README.md#function_move)
* **[BUG_FIX]** Fixed a bug where release does not actually releases the resources
* **[CI_FIX]** Added missing pytest which was removed with the coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [  # Optional
   "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [ # Optional
+"parameterized"
 ]
 [project.optional-dependencies] # Optional
 dev = ["black", "flake8", "mypy"]
