--- a/tox-ci.ini
+++ b/tox-ci.ini
@@ -15,7 +15,8 @@ commands =
     black {posargs:. --check}
     mypy {posargs:src tests}
     flake8 {posargs:.}
-    ; coverage run -m pytest {posargs:tests}    
+    pytest {posargs:tests}
+    ; coverage run -m pytest {posargs:tests}
     ; coverage html
     ; coverage report
 
