--- a/tox-ci.ini
+++ b/tox-ci.ini
@@ -1,4 +1,4 @@
-[tox]black
+[tox]
 requires = tox>=4
 envlist = py{310, 311, 312}
 isolated_env=false
@@ -13,12 +13,11 @@ deps =
     coverage>=7.3
 commands = 
     black {posargs:. --check}
-    mypy {posargs:src tests}
     flake8 {posargs:.}
-    pytest {posargs:tests}
-    ; coverage run -m pytest {posargs:tests}
-    ; coverage html
-    ; coverage report
+    mypy {posargs:src tests}
+    coverage run -m pytest {posargs:tests}
+    coverage report
+    coverage xml
 
 [flake8]
 exclude = .tox,*.egg,build,data,venv
