[MAINTENANCE] Updated dependencies
* Bumped setuptools : 65.5.0 -> 69.1.1
* Bumped black : 23.9 -> 24.2
* Bumped mypy : 1.7 -> 1.8
* Bumped flake8 : 6.1 -> 7.0
* Bumped pytest : 7.4 -> 8.0
* Added pytest-cov 4.1
* Removed coverage 7.3
* Used pytest-cov instead of coverage
* Version Update v0.6.1

--- a/tox-ci.ini
+++ b/tox-ci.ini
@@ -5,19 +5,17 @@ isolated_env=false
 
 [testenv]
 deps = 
-    black>=23.9
-    mypy>=1.7
-    flake8>=6.1
+    black>=24.2
+    mypy>=1.8
+    flake8>=7.0
     flake8-docstrings>=1.7
-    pytest>=7.4
-    coverage>=7.3
+    pytest>=8.0
+    pytest-cov>=4.1
 commands = 
     black {posargs:. --check}
     flake8 {posargs:.}
     mypy {posargs:src tests}
-    coverage run -m pytest {posargs:tests}
-    coverage report
-    coverage xml
+    pytest {posargs:--cov=src tests --cov-report xml --cov-report term}
 
 [flake8]
 exclude = .tox,*.egg,build,data,venv
