--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ deps =
     flake8-docstrings>=1.7
     pytest>=8.0
     pytest-cov>=4.1
+    parameterized>=0.9
 commands = 
     black {posargs:.}
     flake8 {posargs:.}
@@ -18,7 +19,7 @@ commands =
     pytest {posargs:--cov=src tests --cov-report html --cov-report term}
 
 [flake8]
-exclude = .tox,*.egg,build,data,venv
+exclude = .tox,*.egg,build,data,.venv
 select = E,W,F
 docstring-convention = numpy
 per-file-ignores = 
